@@ -2,7 +2,9 @@ package com.ssafy.pillme.global.config;
 
 import com.ssafy.pillme.auth.application.service.CustomMemberDetailsService;
 import java.util.Arrays;
-import lombok.RequiredArgsConstructor;
+import java.util.Collections;
+import java.util.List;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -18,11 +20,19 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 @Configuration
 @EnableWebSecurity
-@RequiredArgsConstructor
 public class SecurityConfig {
-
     private final JwtAuthenticationFilter jwtAuthenticationFilter;
     private final CustomMemberDetailsService userDetailsService;
+    private final String requestUrl;
+
+    public SecurityConfig(
+            @Value("${REQUEST_URL}") String requestUrl,
+            JwtAuthenticationFilter jwtAuthenticationFilter,
+            CustomMemberDetailsService userDetailsService) {
+        this.requestUrl = requestUrl;
+        this.jwtAuthenticationFilter = jwtAuthenticationFilter;
+        this.userDetailsService = userDetailsService;
+    }
 
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
@@ -33,23 +43,22 @@ public class SecurityConfig {
                         session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)
                 )
                 .userDetailsService(userDetailsService)
-//                .authorizeHttpRequests(auth -> auth
-//                        .requestMatchers(
-//                                "/api/v1/auth/signup",
-//                                "/api/v1/auth/login",
-//                                "/api/v1/auth/email/verification",
-//                                "/api/v1/auth/email/verify",
-//                                "/api/v1/auth/sms/verification",
-//                                "/api/v1/auth/sms/verify",
-//                                "/api/v1/auth/find-email",
-//                                "/api/v1/auth/reset-password/**",
-//                                "/api/v1/auth/oauth2/**",
-//                                "/api/v1/auth/check/**"
-//                        )
-//                        .permitAll()
-//                        .anyRequest().authenticated()
-//                )
-                .authorizeHttpRequests(authorizeRequests -> authorizeRequests.anyRequest().permitAll())
+                .authorizeHttpRequests(auth -> auth
+                        .requestMatchers(
+                                "/api/v1/auth/signup",
+                                "/api/v1/auth/login",
+                                "/api/v1/auth/email/verification",
+                                "/api/v1/auth/email/verify",
+                                "/api/v1/auth/sms/verification",
+                                "/api/v1/auth/sms/verify",
+                                "/api/v1/auth/find-email",
+                                "/api/v1/auth/reset-password/**",
+                                "/api/v1/auth/oauth2/**",
+                                "/api/v1/auth/check/**"
+                        )
+                        .permitAll()
+                        .anyRequest().authenticated()
+                )
                 .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
@@ -58,9 +67,9 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOriginPatterns(Arrays.asList("*")); // 프론트엔드 URL
+        configuration.setAllowedOriginPatterns(Collections.singletonList(requestUrl)); // 프론트엔드 URL
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
         configuration.setMaxAge(3600L);
 
